--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-sound": "^1.2.0",
     "styled-components": "^5.2.1",
+    "use-sound": "^2.0.1",
     "web-vitals": "^0.2.4",
     "webamp": "^1.4.2"
   },
