--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "styled-components": "^5.2.1",
     "use-sound": "^2.0.1",
     "web-vitals": "^0.2.4",
-    "webamp": "^1.4.2"
+    "webamp": "^1.4.2",
+    "win95-media-player": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
