--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "win95-media-player": "^0.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://gferrer807.github.io/95",
   "eslintConfig": {
     "extends": [
       "react-app",
