--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.3.0",
     "clippyjs": "0.0.3",
     "react": "^17.0.1",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-sound": "^1.2.0",
